# relation_extraction

./: .gitignore  README.md  pyproject.toml
backend/: Makefile  app.py
code/: train.py
code/data/: dataset.py  marker.py  utils.py
code/model/: metrics.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/css/: cover.css
mlproject/: MLproject  inference.py  train.py
mlproject/data/: __init__.py  dataset.py  marker.py  utils.py
